// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test lexer initial state parse asp echo tag 1`] = `
Program {
  "children": Array [
    Echo {
      "arguments": Array [
        Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "b",
        },
      ],
      "kind": "echo",
      "shortForm": true,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test lexer initial state parse asp tag 1`] = `
Program {
  "children": Array [
    Echo {
      "arguments": Array [
        Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "b",
        },
      ],
      "kind": "echo",
      "shortForm": false,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test lexer initial state parse short echo 1`] = `
Program {
  "children": Array [
    Echo {
      "arguments": Array [
        Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "a",
        },
      ],
      "kind": "echo",
      "shortForm": true,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test lexer initial state parse short tag 1`] = `
Program {
  "children": Array [
    Echo {
      "arguments": Array [
        Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "a",
        },
      ],
      "kind": "echo",
      "shortForm": false,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test lexer test #148 - sensitive lexer 1`] = `
Array [
  Array [
    "T_OPEN_TAG",
    "<?php ",
    1,
  ],
  Array [
    "T_VARIABLE",
    "$this",
    1,
  ],
  Array [
    "T_OBJECT_OPERATOR",
    "->",
    1,
  ],
  Array [
    "T_WHITESPACE",
    " ",
    1,
  ],
  Array [
    "T_STRING",
    "list",
    1,
  ],
  ";",
]
`;

exports[`Test lexer test comments 1`] = `
Program {
  "children": Array [
    Inline {
      "kind": "inline",
      "raw": "
      ",
      "trailingComments": Array [
        CommentLine {
          "kind": "commentline",
          "value": "// simple comment ",
        },
      ],
      "value": "
      ",
    },
    Inline {
      "kind": "inline",
      "raw": "
      ",
      "trailingComments": Array [
        CommentLine {
          "kind": "commentline",
          "value": "// another line ",
        },
      ],
      "value": "      ",
    },
    Inline {
      "kind": "inline",
      "raw": "
      ",
      "trailingComments": Array [
        CommentBlock {
          "kind": "commentblock",
          "value": "/**/",
        },
      ],
      "value": "      ",
    },
    Inline {
      "kind": "inline",
      "raw": "
      ",
      "trailingComments": Array [
        CommentLine {
          "kind": "commentline",
          "value": "// last comment
",
        },
      ],
      "value": "      ",
    },
  ],
  "comments": Array [
    CommentLine {
      "kind": "commentline",
      "value": "// simple comment ",
    },
    CommentLine {
      "kind": "commentline",
      "value": "// another line ",
    },
    CommentBlock {
      "kind": "commentblock",
      "value": "/**/",
    },
    CommentLine {
      "kind": "commentline",
      "value": "// last comment
",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test lexer test tokens 1`] = `
Array [
  Array [
    "T_OPEN_TAG",
    "<?php
",
    1,
  ],
  Array [
    "T_ECHO",
    "echo",
    2,
  ],
  Array [
    "T_WHITESPACE",
    " ",
    2,
  ],
  Array [
    "T_VARIABLE",
    "$var",
    2,
  ],
  ";",
]
`;

exports[`Test lexer test unput on whitespace 1`] = `
Array [
  Array [
    "T_OPEN_TAG",
    "<?php ",
    1,
  ],
  Array [
    "T_WHITESPACE",
    "
	 ",
    1,
  ],
]
`;
